syntax = "proto3";

package gastown.v1;

option go_package = "github.com/steveyegge/gastown/mobile/gen/gastown/v1;gastownv1";

import "google/protobuf/timestamp.proto";
import "gastown/v1/common.proto";

// StatusService provides town and infrastructure status information.
// A "town" is the top-level Gas Town deployment containing rigs (workspaces),
// agents, and infrastructure services (Dolt, tmux, beads).
service StatusService {
  // GetTownStatus returns the full status of the town including overseer info,
  // global agents (Mayor, Deacon), and per-rig status with agent details.
  // Use fast=true to skip mail lookups for quicker responses.
  rpc GetTownStatus(GetTownStatusRequest) returns (GetTownStatusResponse);

  // GetRigStatus returns detailed status for a specific rig including
  // polecats, crews, hooks, and merge queue summary.
  rpc GetRigStatus(GetRigStatusRequest) returns (GetRigStatusResponse);

  // GetAgentStatus returns runtime status for a specific agent including
  // session info, hooked work, and state.
  rpc GetAgentStatus(GetAgentStatusRequest) returns (GetAgentStatusResponse);

  // WatchStatus streams status updates in real-time. Emits updates when
  // agent state changes, rigs are modified, or town-level changes occur.
  rpc WatchStatus(WatchStatusRequest) returns (stream StatusUpdate);

  // HealthCheck returns structured health of all system components
  // (daemon, dolt, tmux, beads). Suitable for K8s readiness/liveness probes.
  // Status is "healthy", "degraded", or "unhealthy".
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

message GetTownStatusRequest {
  bool fast = 1;      // Skip mail lookups for faster response
  bool verbose = 2;   // Include detailed agent info
}

message GetTownStatusResponse {
  TownStatus status = 1;
}

message GetRigStatusRequest {
  string rig_name = 1;
}

message GetRigStatusResponse {
  RigStatus status = 1;
}

message GetAgentStatusRequest {
  AgentAddress address = 1;
}

message GetAgentStatusResponse {
  AgentRuntime agent = 1;
}

message WatchStatusRequest {
  repeated string rigs = 1;  // Empty = watch all rigs
  bool include_agents = 2;   // Include agent state changes
}

message StatusUpdate {
  google.protobuf.Timestamp timestamp = 1;
  oneof update {
    TownStatus town = 2;
    RigStatus rig = 3;
    AgentRuntime agent = 4;
  }
}

// Full town status
message TownStatus {
  string name = 1;
  string location = 2;
  OverseerInfo overseer = 3;
  repeated AgentRuntime global_agents = 4;  // Mayor, Deacon, Boot
  repeated RigStatus rigs = 5;
}

// Status of a single rig
message RigStatus {
  string name = 1;
  string path = 2;
  repeated string polecats = 3;
  repeated string crews = 4;
  bool has_witness = 5;
  bool has_refinery = 6;
  repeated AgentRuntime agents = 7;
  repeated AgentHookInfo hooks = 8;
  MQSummary merge_queue = 9;
}

// Runtime status of an agent
message AgentRuntime {
  string name = 1;
  AgentAddress address = 2;
  string session = 3;       // tmux session name
  string role = 4;          // crew, polecat, witness, etc.
  bool running = 5;         // tmux session exists
  bool has_work = 6;        // work hooked
  string work_title = 7;    // title of hooked work
  string hook_bead = 8;     // ID of hooked bead
  string state = 9;         // stuck, awaiting-gate, muted, working
  int32 unread_mail = 10;
  string first_subject = 11; // First unread mail subject
}

// Hook info for an agent
message AgentHookInfo {
  AgentAddress agent = 1;
  string bead_id = 2;
  string bead_title = 3;
}

// HealthCheckRequest has no parameters - checks all components.
message HealthCheckRequest {}

// HealthCheckResponse returns overall status and per-component health.
message HealthCheckResponse {
  string status = 1;  // "healthy", "degraded", or "unhealthy"
  repeated ComponentHealth components = 2;
}

// ComponentHealth reports the health of a single system component.
message ComponentHealth {
  string name = 1;        // e.g. "daemon", "dolt", "tmux", "beads"
  bool healthy = 2;
  int64 latency_ms = 3;   // Time taken to check this component
  string message = 4;     // Human-readable status or error message
}

// Merge queue summary
message MQSummary {
  int32 pending = 1;
  int32 in_progress = 2;
  int32 completed_today = 3;
  repeated BeadRef queue = 4;
}
